--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
       - name: Run tests
-        run: make test
+        run: make bot-test
   end-to-end-test:
     runs-on: ubuntu-latest
     steps:
