--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -12,7 +12,7 @@ dash==2.13.0
 dash-auth==2.0.0
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
-dash_daq=0.5.0
+dash_daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 discord.py==2.3.2
