--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -33,9 +33,9 @@ packaging==23.1
 pandas==2.1.1
 Pillow==10.0.1
 plotly==5.17.0
-pluggy==1.3.0
+pluggy>=1.4.0
 pyparsing==3.1.1
-pytest==7.4.1
+pytest>=8.2.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
